--- a/app/globals.css
+++ b/app/globals.css
@@ -80,6 +80,14 @@ body {
   scroll-behavior: smooth;
 }
 
+.bg-gradient {
+  background: linear-gradient(
+    180deg,
+    rgba(94, 94, 94, 0) 0%,
+    rgba(38, 38, 38, 0.8) 58%
+  );
+}
+
 .bg-main {
   background-image: url('/images/BgMain.png');
   background-size: cover;
